# Arbor

./: AGENTIC_AI_GUIDE.md  COMPLETE_USAGE_GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DOCS_INDEX.md  DOCUMENTATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENTERPRISE_DEPLOYMENT.md  LAYER_GROWTH_IMPLEMENTATION.md  LLAMA_UPDATE_SUMMARY.md  LONG_CONTEXT_GUIDE.md  LONG_CONTEXT_UPDATE.md  MULTIMODAL_ROADMAP.md  POST_TRAINING_GUIDE.md  README.md  SAFETY_DOCUMENTATION.md  SCALING_GUIDE.md  arbor_setup_checker.py  create_hf_quick.py  demo_adaptive_context.py  demo_safety.py  deploy.sh  inference_agent.py  launch_training_dashboard.py  post_train.py  pyproject.toml  requirements-agent.txt  run_tests.py  setup.py  setup_install.py  setup_simple.py  start.py  test_config.py  train.py  train_multimodal.py
arbor/: __init__.py  cli.py
arbor-500m-1b-hf/: README.md  config.json  generation_config.json  tokenizer_config.json
arbor/agents/: __init__.py  base_agent.py  code_executor.py  mcp_client.py  planner.py  tools.py
arbor/data/: __init__.py  dataset.py  synthetic.py  tokenize.py
arbor/growth/: __init__.py  manager.py  triggers.py
arbor/inference/: __init__.py  enterprise_inference.py
arbor/modeling/: __init__.py  adaptive_context.py  block.py  enterprise.py  layers.py  model.py  multimodal.py
arbor/safety/: __init__.py  approval.py  config.py  guardian.py
arbor/tracking/: __init__.py  alerts.py  dashboard.py  metrics.py  monitor.py  visualizer.py
arbor/train/: __init__.py  checkpoint.py  optimizer_utils.py  post_trainer.py  train_loop.py  yaml_trainer.py
arbor/training/: distributed.py
arbor/transformers_integration/: __init__.py  configuration_arbor.py  modeling_arbor.py
arbor/utils/: __init__.py  logging.py  metrics.py
configs/: agent_config.yaml  arbor_500m_1b.py  arbor_base.yaml  arbor_enterprise_scale.yaml  arbor_growth.yaml  arbor_layer_growth.yaml  arbor_small.yaml  example_config.yaml  multimodal_training_config.yaml  post_training_fine_tune.yaml  post_training_immediate.yaml  post_training_instruct.yaml  training_config.yaml
examples/: README.md  agent_usage.py  custom_inference_example.py  layer_growth_demo.py  training_with_dashboard.py  transformers_example.py
notebooks/: demo.ipynb  yaml_trainer_example.ipynb
scripts/: create_hf_model.py  enterprise_deploy.py  eval.py  prep_data.py  train.py
tests/: test_growth_manager.py  test_layers.py  test_smoke_train.py
